Add Tanstack integration guide (#3)
* feat: added tanstack integration guide

* fix: change marble name

* fix: properly type functions and add types to docs

---------

Co-authored-by: Dominik Koch <dominik@koch-bautechnik.de>

--- a/content/guides/quickstart.mdx
+++ b/content/guides/quickstart.mdx
@@ -15,7 +15,7 @@ To get started, head over to [marblecms.com](https://marblecms.com) and click th
     />
     <img
       src="/images/signup-light.jpeg"
-      alt="MarbleCMS sign-up page"
+      alt="Marble sign-up page"
     />
   </picture>
 </Frame>
@@ -58,7 +58,7 @@ Once your workspace is ready, you’ll be taken to the dashboard. This is your c
     />
     <img
       src="/images/dashboard-light.jpeg"
-      alt="The MarbleCMS dashboard"
+      alt="The Marble dashboard"
     />
   </picture>
 </Frame>
@@ -77,20 +77,21 @@ When you're ready, you can save your post as a draft or publish it immediately.
     />
     <img
       src="/images/editor-light.jpeg"
-      alt="The MarbleCMS post editor"
+      alt="The Marble post editor"
     />
   </picture>
 </Frame>
 </Step>
 
 <Step title="Next Steps">
-That's it! You've successfully set up your MarbleCMS workspace and created your first post. 🚀
+That's it! You've successfully set up your Marble workspace and created your first post. 🚀
 
 Now you're ready to connect your content to your frontend. Check out our integration guides to get started.
 
 <CardGroup>
   <Card title="Next.js Integration" href="/content/guides/integrations/nextjs" icon="react"></Card>
   <Card title="Astro Integration" href="/content/guides/integrations/astro" icon="stars"></Card>
+  <Card title="TanStack Start Integration" href="/content/guides/integrations/tanstack" icon="tree-palm"></Card>
 </CardGroup>
 </Step>
 </Steps>
