--- a/content/api/types.mdx
+++ b/content/api/types.mdx
@@ -14,97 +14,116 @@ All types are based on the actual API responses and are kept up-to-date with the
 
 ```typescript
 export type Post = {
-    id: string;
-    slug: string;
-    title: string;
-    content: string;
-    description: string;
-    coverImage: string;
-    publishedAt: Date;
-    updatedAt: Date;
-    authors: {
-      id: string;
-      name: string;
-      image: string;
-    }[];
-    category: {
-      id: string;
-      slug: string;
-      name: string;
-    };
-    tags: {
-      id: string;
-      slug: string;
-      name: string;
-    }[];
-    attribution: {
-      author: string;
-      url: string;
-    } | null;
-  };
-  
-  export type Pagination = {
-    limit: number;
-    currentPage: number;
-    nextPage: number | null;
-    previousPage: number | null;
-    totalItems: number;
-    totalPages: number;
-  };
-  
-  export type MarblePostList = {
-    posts: Post[];
-    pagination: Pagination;
-  };
-  
-  export type MarblePost = {
-    post: Post;
-  };
-  
-  export type Tag = {
-    id: string;
-    name: string;
-    slug: string;
-  };
-  
-  export type MarbleTag = {
-    tag: Tag;
-  };
-  
-  export type MarbleTagList = {
-    tags: Tag[];
-    pagination: Pagination;
-  };
-  
-  export type Category = {
-    id: string;
-    name: string;
-    slug: string;
-  };
-  
-  export type MarbleCategory = {
-    category: Category;
-  };
-  
-  export type MarbleCategoryList = {
-    categories: Category[];
-    pagination: Pagination;
-  };
-  
-  export type Author = {
+  id: string;
+  slug: string;
+  title: string;
+  content: string;
+  description: string;
+  coverImage: string;
+  publishedAt: Date;
+  updatedAt: Date;
+  authors: {
     id: string;
     name: string;
     image: string;
+  }[];
+  category: Omit<Category, "count">;
+  tags: Omit<Tag, "count">[];
+  attribution: {
+    author: string;
+    url: string;
+  } | null;
+};
+
+export type Pagination = {
+  limit: number;
+  currentPage: number;
+  nextPage: number | null;
+  previousPage: number | null;
+  totalItems: number;
+  totalPages: number;
+};
+
+export type MarblePostList = {
+  posts: Post[];
+  pagination: Pagination;
+};
+
+export type MarblePost = {
+  post: Post;
+};
+
+export type Tag = {
+  id: string;
+  name: string;
+  slug: string;
+  description: string | null;
+  count: {
+    posts: number;
   };
-  
-  export type MarbleAuthor = {
-    author: Author;
+};
+export type MarbleTag = {
+  tag: Tag;
+};
+
+export type MarbleTagList = {
+  tags: Tag[];
+  pagination: Pagination;
+};
+
+export type Category = {
+  id: string;
+  name: string;
+  slug: string;
+  description: string | null;
+  count: {
+    posts: number;
   };
-  
-  export type MarbleAuthorList = {
-    authors: Author[];
-    pagination: Pagination;
-  };
+};
+
+export type MarbleCategory = {
+  category: Category;
+};
+
+export type MarbleCategoryList = {
+  categories: Category[];
+  pagination: Pagination;
+};
+
+export type Author = {
+  id: string;
+  name: string;
+  slug: string;
+  image: string | null;
+  bio: string | null;
+  role: string | null;
+  socials: Social[];
+};
+export type Social = {
+  url: string;
+  platform: SocialPlatform;
+};
+export type SocialPlatform =
+| "x"
+| "github"
+| "facebook"
+| "instagram"
+| "youtube"
+| "tiktok"
+| "linkedin"
+| "website"
+| "onlyfans"
+| "discord"
+| "bluesky";
+
+export type MarbleAuthor = {
+  author: Author;
+};
+
+export type MarbleAuthorList = {
+  authors: Author[];
+  pagination: Pagination;
+};
 ```
 
 <Tip>
@@ -128,26 +147,31 @@ const PostSchema = z.object({
   publishedAt: z.coerce.date(),
   updatedAt: z.coerce.date(),
   authors: z.array(z.object({
-    id: z.string(),
-    name: z.string(),
-    image: z.string().url(),
+  id: z.string(),
+  name: z.string(),
+  slug: z.string(),
+  image: z.string().nullable(),
+  bio: z.string().nullable(),
+  role: z.string().nullable(),
+  socials: z.array(SocialSchema),
   })),
   category: z.object({
     id: z.string(),
     slug: z.string(),
     name: z.string(),
+    description: z.string().z.optional(),
   }),
   tags: z.array(z.object({
     id: z.string(),
     slug: z.string(),
     name: z.string(),
+    description: z.string().z.optional(),
   })),
   attribution: z.object({
     author: z.string(),
     url: z.string().url(),
   }).nullable(),
 });
-
 const PaginationSchema = z.object({
   limit: z.number(),
   currentPage: z.number(),
@@ -156,4 +180,21 @@ const PaginationSchema = z.object({
   totalItems: z.number(),
   totalPages: z.number(),
 });
+export const SocialSchema = z.object({
+  url: z.string(),
+  platform: SocialPlatformSchema,
+});
+export const SocialPlatformSchema = z.enum([
+  "x",
+  "github", 
+  "facebook",
+  "instagram",
+  "youtube",
+  "tiktok",
+  "linkedin",
+  "website",
+  "onlyfans",
+  "discord",
+  "bluesky"
+]);
 ```
