fix: use correct urls

--- a/content/api/endpoint/posts.mdx
+++ b/content/api/endpoint/posts.mdx
@@ -65,7 +65,6 @@ fetch("https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts")
 ```
 </ResponseExample>
 
-
 ### Query Parameters
 
 Use query parameters to paginate, sort, and filter the results.
@@ -100,5 +99,5 @@ Use query parameters to paginate, sort, and filter the results.
   Responses include a `pagination` object with `limit`, `currentPage`,
   `previousPage`, `nextPage`, `totalPages`, and `totalItems`. For advanced usage
   and error cases (like invalid page numbers), see the full guide on
-  <a href="/content/api-reference/pagination">Pagination</a>.
+  <a href="/content/api/pagination">Pagination</a>.
 </Note>
