--- a/content/guides/integrations/tanstack.mdx
+++ b/content/guides/integrations/tanstack.mdx
@@ -44,11 +44,19 @@ npm install zod
 ```
 
 <Note>
-For complete TypeScript type definitions, see our [TypeScript Types reference](/content/api-reference/types). The server functions below use these types for full type safety.
+  For complete TypeScript type definitions, see our [TypeScript Types
+  reference](/content/api/types). The server functions below use these types for
+  full type safety.
 </Note>
 
 ```typescript lib/query.ts
-import type { MarbleAuthorList, MarbleCategoryList, MarblePost, MarblePostList, MarbleTagList } from '@/types/marble';
+import type {
+  MarbleAuthorList,
+  MarbleCategoryList,
+  MarblePost,
+  MarblePostList,
+  MarbleTagList,
+} from "@/types/marble";
 import { createServerFn } from "@tanstack/react-start";
 import { z } from "zod";
 
@@ -66,14 +74,14 @@ export const getPosts = createServerFn().handler(async () => {
 });
 
 export const getTags = createServerFn().handler(async () => {
-    try {
-      const raw = await fetch(`${url}/${key}/tags`);
-      const data: MarbleTagList = await raw.json();
-      return data;
-    } catch (error) {
-      console.log(error);
-    }
-  });
+  try {
+    const raw = await fetch(`${url}/${key}/tags`);
+    const data: MarbleTagList = await raw.json();
+    return data;
+  } catch (error) {
+    console.log(error);
+  }
+});
 
 export const getSinglePost = createServerFn()
   .validator(z.string())
